--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
     image: containrrr/watchtower:latest
     container_name: watchtower
     environment:
-      - WATCHTOWER_POOL_INTERVAL=60
+      - DOCKER_API_VERSION=1.45
+      - WATCHTOWER_POLL_INTERVAL=60
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
