--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,12 @@
 services:
+
+  express-app:
+    image: zebrasino/express-app:latest
+    container_name: express-app
+    ports:
+      - 9000:9000
+    restart: always
+    
   watchtower:
     image: containrrr/watchtower:latest
     container_name: watchtower
@@ -7,3 +15,6 @@ services:
       - WATCHTOWER_POLL_INTERVAL=60
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - express-app
+    
